--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,8 @@ legend
 
 CONVERTER
 ---------
+1.1.2b  2014.11.13      + method getColumnKey to file model/upgrade/table_columns.php
+                        + method getColumnType to file model/upgrade/table_columns.php
 1.1.1   2014.11.12      + Database Upgrade to OC version 2.0.0.1b
 1.1.0   2014.11.11      ^ Class Structure of Table order in file model/upgrade/database.php
                         # method getDbColumns
