--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ legend
 
 CONVERTER
 ---------
+1.1.3   2014.11.15      # setting add to layout_module table in versions 1.5.0x
 1.1.2   2014.11.13      + method getColumnKey to file model/upgrade/table_columns.php
                         + method getColumnType to file model/upgrade/table_columns.php
                         + notification database OC version level in time of upgrade
