--- a/beta-project/changelog.txt
+++ b/beta-project/changelog.txt
@@ -11,6 +11,8 @@ legend
 
 CONVERTER
 ---------
+1.1.8 B 2014.11.25      + API localhost user
+                        # featured module key 'limit' in versions 1.5.1 - 1.5.1.3
 1.1.7 B 2014.11.19      +  administrator permissions new layouts
 1.1.6 B 2014.11.18      + tables for versions 1.4.7 - 1.4.9x
                         + columns for versions 1.4.7 - 1.4.9x
