--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,8 @@ legend
 
 CONVERTER
 ---------
+1.1.8   2014.11.28      + versions 1.4.7 - 1.4.9.5
+                        + Opencart Github project to current level
 1.1.7   2014.11.25      + API localhost user
                         # featured module key 'limit' in versions 1.5.1 - 1.5.1.3
 1.1.6   2014.11.19      +  administrator permissions new layouts
