--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ legend
 
 CONVERTER
 ---------
+1.1.9   2014.11.30      + to Opencart 2.0.1.0 level
 1.1.8   2014.11.28      + versions 1.4.7 - 1.4.9.5
                         + Opencart Github project to current level
 1.1.7   2014.11.25      + API localhost user
