--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,10 @@ legend
 
 CONVERTER
 ---------
+1.2.1   2014.12.06      ^ up Opencart version 2.0.1.1
+                        # module save
+1.2.0   2014.12.03      ^ all serialize modules custom same method
+                        # change also all subpages serialize basic modules
 1.1.9   2014.11.30      + to Opencart 2.0.1.0 level
 1.1.8   2014.11.28      + versions 1.4.7 - 1.4.9.5
                         + Opencart Github project to current level
