--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,9 @@ legend
 
 CONVERTER
 ---------
+1.2.2   2014.15.06      ^ code field store_id check in table setting
+                        + help files, library/user.php before and after field 'salt' in table user
+                        # layout_id and layout_route_id
 1.2.1   2014.12.06      ^ up Opencart version 2.0.1.1
                         # module save
 1.2.0   2014.12.03      ^ all serialize modules custom same method
