--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ legend
 CONVERTER
 ---------
 1.2.3   2015.01.20      + product name add to column meta_title
+                        + category name add to column meta_title
 1.2.2   2014.15.06      ^ code field store_id check in table setting
                         + help files, library/user.php before and after field 'salt' in table user
                         # layout_id and layout_route_id
