--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,8 @@ legend
 
 CONVERTER
 ---------
+1.3.0   2015.03.20      # login in original file converter/system/library/user.php
+                        ^ deleted directories with files upload/help-version
 1.2.9   2015.03.18      # version 2.0.0.0: add column 'xml' to table modifiaction
                         # version 2.0.0.0: copy column 'code' to column 'xml' in table modifiaction
                         ^ column 'xml' type to 'mediumtext' in table 'modification'
