--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,9 @@ legend
 
 CONVERTER
 ---------
+1.3.1   2015.03.20      # file `model/upgrade/table_colums.php` in line 946 index 'column' to 'field'
+                        # remove elseif ADD COLUMN in file  `model/upgrade/table_colums.php` lines 965-978
+                        ^ remove Option 2 from Upgrade (images copy to new store)
 1.3.0   2015.03.20      # login in original file converter/system/library/user.php
                         ^ deleted directories with files upload/help-version
 1.2.9   2015.03.18      # version 2.0.0.0: add column 'xml' to table modifiaction
