--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,8 @@ legend
 
 CONVERTER
 ---------
+1.3.2   2015.03.24      + check table `tax_rate` sturcture and corrected, if necessary
+                        + readme.txt update
 1.3.1   2015.03.23      # file `model/upgrade/table_colums.php` in line 946 index 'column' to 'field'
                         # remove elseif ADD COLUMN in file  `model/upgrade/table_colums.php` lines 965-978
                         ^ remove Option 2 from Upgrade (images copy to new store)
