--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ legend
 
 CONVERTER
 ---------
+1.3.3   2015.03.29      + update theme
 1.3.2   2015.03.24      + check table `tax_rate` sturcture and corrected, if necessary
                         + readme.txt update
 1.3.1   2015.03.23      # file `model/upgrade/table_colums.php` in line 946 index 'column' to 'field'
