--- a/changelog.txt
+++ b/changelog.txt
@@ -19,7 +19,7 @@ legend
 CONVERTER
 ---------
 1.3.3   2015.03.30      + update theme
-                        # top link in page 'common/home/user'
+                        # breadcrumb link in page 'common/home/user'
 1.3.2   2015.03.24      + check table `tax_rate` sturcture and corrected, if necessary
                         + readme.txt update
 1.3.1   2015.03.23      # file `model/upgrade/table_colums.php` in line 946 index 'column' to 'field'
