--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ legend
 
 CONVERTER
 ---------
+1.3.4   2015.03.04      # method getSalt() in file converter/system/library/user.php
 1.3.3   2015.03.30      + update theme
                         # breadcrumb link in page 'common/home/user'
 1.3.2   2015.03.24      + check table `tax_rate` sturcture and corrected, if necessary
