--- a/changelog.txt
+++ b/changelog.txt
@@ -19,7 +19,7 @@ legend
 CONVERTER
 ---------
 1.3.4   2015.03.04      # method getSalt() in file converter/system/library/user.php
-                        # columns to tables `product` and `product_description` in version 1.4.x
+                        # columns to tables `affiliate`, `category_description`, `product` and `product_description` in version 1.4.x
                         # table `banner` simulation  in version 1.4.x
 1.3.3   2015.03.30      + update theme
                         # breadcrumb link in page 'common/home/user'
