--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ legend
 
 CONVERTER
 ---------
+1.3.5   2015.05.03      # removed blank characters at the end of a php file in directory controller/common
 1.3.4   2015.03.04      # method getSalt() in file converter/system/library/user.php
                         # columns to tables `affiliate`, `category_description`, `product` and `product_description` in version 1.4.x
                         # table `banner` simulation  in version 1.4.x
