--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ legend
 
 CONVERTER
 ---------
+1.3.7   2015.06.05      + Product Options Change in versions 1.4.x
 1.3.6   2015.05.24      + Upgrade to version 2.0.3.1
                         + option upgrade to version 2.0.1-2.0.2.0 or to version 2.0.3.1
 1.3.5   2015.05.03      # removed blank characters at the end of a php file in directory controller/common
