--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,10 @@ legend
 
 CONVERTER
 ---------
+1.3.9   2015.07.03      # configuration in simulate status
+                        ^ Simplified language library
+                        - admin language change
+                        - forgotten password link
 1.3.8   2015.07.02      + Added three new languages, Dutch, Turkish and Portuguese of Brazilian
                         ^ DB_DRIVER in file config.php from store settings
 1.3.7   2015.06.05      + Product Options Change in versions 1.4.x
