--- a/changelog.txt
+++ b/changelog.txt
@@ -20,8 +20,10 @@ CONVERTER
 ---------
 2.0.3.2015.08.29        # settings config_file_mime_allowed increase script
                         + settings config_file_ext_allowed
-                        + settings config_image_compare_width & height
-                        + settings config_image_wishlist_width & height
+                        + settings config_image_compare_width & height in version 1.4.x
+                        + settings config_image_wishlist_width & height in version 1.4.x
+                        + column `code` to table `order_total` in version 1.4.x
+                        + column `value`to table `product_option` in version 1.4.x
 2.0.2 2015.08.21        # save to table customer group description in old version
                         # save to config.php files
 2.0.1 2015.08.03        - system/library/session.php
