--- a/changelog.txt
+++ b/changelog.txt
@@ -24,6 +24,7 @@ CONVERTER
                         + settings config_image_wishlist_width & height in version 1.4.x
                         + column `code` to table `order_total` in version 1.4.x
                         + column `value`to table `product_option` in version 1.4.x
+                        + column `approval` data to table `customer_group` in version 1.4.x
 2.0.2 2015.08.21        # save to table customer group description in old version
                         # save to config.php files
 2.0.1 2015.08.03        - system/library/session.php
