--- a/changelog.txt
+++ b/changelog.txt
@@ -25,7 +25,15 @@ CONVERTER
                         + column `code` to table `order_total` in version 1.4.x
                         + column `value`to table `product_option` in version 1.4.x
                         + column `approval` data to table `customer_group` in version 1.4.x
+                        + methods `language`, `hasTotal` and `hasApproval` to class `structure`
                         + table `return_reason` data in version 1.4.x
+                        # table `return_action` language_id of data in version 1.4.x
+                        # table `return_status` language_id of data in version 1.4.x
+                        # table `attribute_description` language_id of data in version 1.4.x
+                        # table `attribute_group_description` language_id of data in version 1.4.x
+                        # table `option_description` language_id of data in version 1.4.x
+                        # table `option_value_description` language_id of data in version 1.4.x
+                        # table `voucher_theme_n_description` language_id of data in version 1.4.x
 2.0.2 2015.08.21        # save to table customer group description in old version
                         # save to config.php files
 2.0.1 2015.08.03        - system/library/session.php
