--- a/changelog.txt
+++ b/changelog.txt
@@ -33,7 +33,8 @@ CONVERTER
                         # table `attribute_group_description` language_id of data in version 1.4.x
                         # table `option_description` language_id of data in version 1.4.x
                         # table `option_value_description` language_id of data in version 1.4.x
-                        # table `voucher_theme_n_description` language_id of data in version 1.4.x
+                        # table `voucher_theme_description` language_id of data in version 1.4.x
+                        # table `customer_group_description`  data in version 1.4.x - 1.5.1
 2.0.2 2015.08.21        # save to table customer group description in old version
                         # save to config.php files
 2.0.1 2015.08.03        - system/library/session.php
